tests/ui/github_issue_not_found.rs


#[issue::track(url="https://github.com/KaiserKarel/issue/issues/0")]
fn main() {

}